# tum

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  RADME.md  README.md  RELEASE_NOTES.md
.github/workflows/: lint-and-build.yml  release.yml
config/: example-config.yaml
docker/: mosquitto.dockerfile
docker/config/: mosquitto.conf
src/: command.rs  configuration.rs  lib.rs  main.rs  monitor.rs  mqtt_client.rs  resource.rs
