[package]
name = "tum"
version = "0.1.0"
edition = "2021"
authors = ["Luka Paulic <luka.paulic0@gmail.com>"]
description = "Microsoft Teams implementation in RS using NCurses"
license = "MIT"

[[bin]]
name = "tum"
test = true
bench = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
