[package]
name = "tum"
version = "0.1.0"
edition = "2021"
authors = ["Luka Paulic <luka.paulic0@gmail.com>"]
description = "Microsoft Teams implementation in RS using NCurses"
license = "MIT"

[[bin]]
name = "tum"
test = true
bench = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
assert-json-diff = "2"
rumqttc = "0"
gethostname = "0"
random-string = "1"