[package]
name = "tum"
version = "0.4.2"
edition = "2021"
authors = ["Luka Paulic <luka.paulic0@gmail.com>"]
description = "System usage monitoring for a friend"
license = "MIT"

[[bin]]
name = "tum"
test = true
bench = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0"
assert-json-diff = "2"
rumqttc = "0"
gethostname = "0"
random-string = "1"
ctrlc = "3"
clap = { version = "4.3", features = ["derive"]}